--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gographer"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 
 [lib]
@@ -20,3 +20,4 @@ regex = "1.11"
 serde = "1.0"
 serde_json = "1.0"
 smda = "0.2.12"
+thiserror = "2.0.12"
