--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
                 platform:
                     - runner: ubuntu-24.04
                       target: x86_64
+                    - runner: ubuntu-24.04-arm
+                      target: aarch64
 
         steps:
             - uses: actions/checkout@v4
@@ -28,7 +30,7 @@ jobs:
               uses: PyO3/maturin-action@v1
               with:
                 target: ${{ matrix.platform.target }}
-                args: --release --out dist --find-interpreter
+                args: --release --out dist
                 sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
                 manylinux: auto
 
@@ -45,6 +47,10 @@ jobs:
                 platform:
                     - runner: windows-latest
                       target: x64
+                    - runner: windows-latest
+                      target: x86
+                    - runner: windows-11-arm
+                      target: aarch64
 
         steps:
             - uses: actions/checkout@v4
@@ -53,12 +59,13 @@ jobs:
               uses: actions/setup-python@v5
               with:
                 python-version: '>=3.10'
+                architecture: ${{ matrix.platform.target == 'aarch64' && 'arm64' || matrix.platform.target }}
 
             - name: Build release distributions
               uses: PyO3/maturin-action@v1
               with:
-                target: ${{ matrix.platform.target }}
-                args: --release --out dist --find-interpreter
+                target: ${{ matrix.platform.target == 'x86' && 'i686-pc-windows-msvc' || matrix.platform.target }}
+                args: --release --out dist
                 sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
                 manylinux: auto
 
@@ -90,7 +97,7 @@ jobs:
               uses: PyO3/maturin-action@v1
               with:
                 target: ${{ matrix.platform.target }}
-                args: --release --out dist --find-interpreter
+                args: --release --out dist
                 sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
                 manylinux: auto
 
